Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-15106

Unexpected ER_WRONG_INSERT_INTO_SEQUENCE upon INSERT with multiple locks on sequences

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Critical
    • Resolution: Fixed
    • 10.3(EOL)
    • 10.3.7
    • Sequences
    • None
    • b8c92d752c34e51dbe8ed551542415e2481581d7

    Description

      CREATE SEQUENCE seq1;
      CREATE SEQUENCE seq2;
      LOCK TABLE seq1 WRITE, seq2 WRITE;
      INSERT INTO seq1 VALUES (1, 1, 100000, 1, 1, 100, 1, 1);
       
      DROP SEQUENCE seq1, seq2;
      

      MariaDB [test]> INSERT INTO seq1 VALUES (1, 1, 100000, 1, 1, 100, 1, 1);
      ERROR 4093 (HY000): Wrong INSERT into a SEQUENCE. One can only do single table INSERT into a sequence object (like with mysqldump).  If you want to change the SEQUENCE, use ALTER SEQUENCE instead.
      

      Attachments

        Issue Links

          Activity

            People

              monty Michael Widenius
              elenst Elena Stepanova
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - 0d
                  0d
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 4.5h
                  4.5h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.